--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,18 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "primitive_db"
-version = "0.1.1"
+version = "0.1.3"
 description = "Primitive Database"
+readme = "README.md"
+license = "MIT"
 authors = [{name = "Luzanchuk_B25-515"}]
 requires-python = ">=3.9"
+keywords = ["database", "cli", "sql", "relational"]
 
 packages = [{ include = "src" },]
 
 [tool.poetry.scripts]
-project = "primitive_db.main:main"
+database = "primitive_db.main:main"
 
 [tool.poetry.dependencies]
 prompt = "^0.4.1"
