--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "database-cli"
+name = "project"
 version = "0.2.0"
 description = "Простая реляционная база данных с CLI интерфейсом"
 authors = ["Luzanchuk_B25-515"]
@@ -26,10 +26,19 @@ line-length = 88
 target-version = "py312"
 exclude = ["venv", ".venv", "dist", "__pycache__"]
 
-[tool.ruff.lint]
-select = ["E", "F", "I"]
-ignore = []
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.lint]
+select = [
+    "E",
+    "W",
+    "F",
+    "I",
+    "B",
+    "C4",
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["src"]
